Issue #25914: Fixed and simplified OrderedDict.__sizeof__.